--- a/dists/msvc8/sci.vcproj
+++ b/dists/msvc8/sci.vcproj
@@ -202,15 +202,23 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\engines\sci\engine\int_hashmap.cpp"
+				RelativePath="..\..\engines\sci\engine\intmap.cpp"
 				>
 			</File>
 			<File
-				RelativePath="..\..\engines\sci\engine\int_hashmap.h"
+				RelativePath="..\..\engines\sci\engine\intmap.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\engine\kdebug.h"
 				>
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\engine\kernel.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\engine\kernel.h"
 				>
 			</File>
 			<File
@@ -302,7 +310,15 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\engines\sci\engine\sys_strings.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\engines\sci\engine\vm.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\engine\vm.h"
 				>
 			</File>
 		</Filter>
@@ -366,6 +382,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\engines\sci\gfx\gfx_widgets.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\engines\sci\gfx\gfx_widgets.h"
 				>
 			</File>
@@ -374,7 +394,15 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\engines\sci\gfx\menubar.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\engines\sci\gfx\operations.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\gfx\operations.h"
 				>
 			</File>
 			<File
@@ -394,7 +422,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\engines\sci\gfx\widgets.cpp"
+				RelativePath="..\..\engines\sci\gfx\sci_widgets.h"
 				>
 			</File>
 			<Filter
@@ -462,11 +490,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\engines\sci\scicore\sci_memory.cpp"
+				RelativePath="..\..\engines\sci\scicore\sciconsole.cpp"
 				>
 			</File>
 			<File
-				RelativePath="..\..\engines\sci\scicore\sciconsole.cpp"
+				RelativePath="..\..\engines\sci\scicore\sciconsole.h"
 				>
 			</File>
 			<File
@@ -614,31 +642,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\engines\sci\include\event.h"
-				>
-			</File>
-			<File
 				RelativePath="..\..\engines\sci\include\heapmgr.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\include\kdebug.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\include\kernel.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\include\list.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\include\menubar.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\include\sci_memory.h"
 				>
 			</File>
 			<File
@@ -646,27 +650,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\engines\sci\include\sci_widgets.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\include\sciconsole.h"
-				>
-			</File>
-			<File
 				RelativePath="..\..\engines\sci\include\sciresource.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\engines\sci\include\scitypes.h"
-				>
-			</File>
-			<File
 				RelativePath="..\..\engines\sci\include\script.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\include\sys_strings.h"
 				>
 			</File>
 			<File
@@ -675,10 +663,6 @@
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\include\versions.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\include\vm.h"
 				>
 			</File>
 			<File
@@ -716,6 +700,14 @@
 		</File>
 		<File
 			RelativePath="..\..\engines\sci\sci.h"
+			>
+		</File>
+		<File
+			RelativePath="..\..\engines\sci\sci_memory.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\engines\sci\sci_memory.h"
 			>
 		</File>
 		<File
