--- a/dists/msvc7/sci.vcproj
+++ b/dists/msvc7/sci.vcproj
@@ -136,6 +136,9 @@
 				RelativePath="..\..\engines\sci\engine\intmap.h">
 			</File>
 			<File
+				RelativePath="..\..\engines\sci\engine\kdebug.cpp">
+			</File>
+			<File
 				RelativePath="..\..\engines\sci\engine\kdebug.h">
 			</File>
 			<File
