--- a/dists/msvc8/sci.vcproj
+++ b/dists/msvc8/sci.vcproj
@@ -210,6 +210,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\engines\sci\engine\kdebug.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\engines\sci\engine\kdebug.h"
 				>
 			</File>
