--- a/dists/msvc9/parallaction.vcproj
+++ b/dists/msvc9/parallaction.vcproj
@@ -208,6 +208,10 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\engines\parallaction\exec.cpp"
+			>
+		</File>
+		<File
 			RelativePath="..\..\engines\parallaction\exec.h"
 			>
 		</File>
