--- a/dists/msvc7/parallaction.vcproj
+++ b/dists/msvc7/parallaction.vcproj
@@ -134,6 +134,9 @@
 			RelativePath="..\..\engines\parallaction\disk_ns.cpp">
 		</File>
 		<File
+			RelativePath="..\..\engines\parallaction\exec.cpp">
+		</File>
+		<File
 			RelativePath="..\..\engines\parallaction\exec.h">
 		</File>
 		<File
