--- a/dists/msvc71/parallaction.vcproj
+++ b/dists/msvc71/parallaction.vcproj
@@ -148,6 +148,9 @@
 			RelativePath="..\..\engines\parallaction\disk_ns.cpp">
 		</File>
 		<File
+			RelativePath="..\..\engines\parallaction\exec.cpp">
+		</File>
+		<File
 			RelativePath="..\..\engines\parallaction\exec.h">
 		</File>
 		<File
