--- a/dists/msvc71/sci.vcproj
+++ b/dists/msvc71/sci.vcproj
@@ -240,6 +240,9 @@
 		<Filter
 			Name="gfx">
 			<File
+				RelativePath="..\..\engines\sci\gfx\crossblit.h">
+			</File>
+			<File
 				RelativePath="..\..\engines\sci\gfx\font.cpp">
 			</File>
 			<File
@@ -286,6 +289,9 @@
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\gfx\gfx_widgets.h">
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\gfx\line.h">
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\gfx\menubar.cpp">
