--- a/dists/msvc8/sci.vcproj
+++ b/dists/msvc8/sci.vcproj
@@ -330,6 +330,10 @@
 			Name="gfx"
 			>
 			<File
+				RelativePath="..\..\engines\sci\gfx\crossblit.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\engines\sci\gfx\font.cpp"
 				>
 			</File>
@@ -391,6 +395,10 @@
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\gfx\gfx_widgets.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\gfx\line.h"
 				>
 			</File>
 			<File
