--- a/dists/msvc9/sci.vcproj
+++ b/dists/msvc9/sci.vcproj
@@ -331,6 +331,10 @@
 			Name="gfx"
 			>
 			<File
+				RelativePath="..\..\engines\sci\gfx\crossblit.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\engines\sci\gfx\font.cpp"
 				>
 			</File>
@@ -392,6 +396,10 @@
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\gfx\gfx_widgets.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\gfx\line.h"
 				>
 			</File>
 			<File
