--- a/dists/msvc71/sci.vcproj
+++ b/dists/msvc71/sci.vcproj
@@ -144,6 +144,9 @@
 				RelativePath="..\..\engines\sci\engine\heap.h">
 			</File>
 			<File
+				RelativePath="..\..\engines\sci\engine\heapmgr.h">
+			</File>
+			<File
 				RelativePath="..\..\engines\sci\engine\intmap.cpp">
 			</File>
 			<File
@@ -210,7 +213,7 @@
 				RelativePath="..\..\engines\sci\engine\savegame.cpp">
 			</File>
 			<File
-				RelativePath="..\..\engines\sci\engine\sci_graphics.h">
+				RelativePath="..\..\engines\sci\engine\script.h">
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\engine\scriptconsole.cpp">
@@ -225,10 +228,19 @@
 				RelativePath="..\..\engines\sci\engine\seg_manager.h">
 			</File>
 			<File
+				RelativePath="..\..\engines\sci\engine\state.cpp">
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\engine\state.h">
+			</File>
+			<File
 				RelativePath="..\..\engines\sci\engine\vm.cpp">
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\engine\vm.h">
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\engine\vm_types.h">
 			</File>
 		</Filter>
 		<Filter
@@ -470,36 +482,6 @@
 					RelativePath="..\..\engines\sci\sfx\softseq\softsequencers.cpp">
 				</File>
 			</Filter>
-		</Filter>
-		<Filter
-			Name="include">
-			<File
-				RelativePath="..\..\engines\sci\include\engine.h">
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\include\heapmgr.h">
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\include\sci_midi.h">
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\include\sciresource.h">
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\include\script.h">
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\include\uinput.h">
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\include\versions.h">
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\include\vm_types.h">
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\include\vocabulary.h">
-			</File>
 		</Filter>
 		<File
 			RelativePath="..\..\engines\sci\console.cpp">
