Updated the MSVC project files of the SCI and SWORD1 engines
svn-id: r38962

--- a/dists/msvc7/sci.vcproj
+++ b/dists/msvc7/sci.vcproj
@@ -124,12 +124,6 @@
 				RelativePath="..\..\engines\sci\engine\grammar.cpp">
 			</File>
 			<File
-				RelativePath="..\..\engines\sci\engine\heap.cpp">
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\engine\heap.h">
-			</File>
-			<File
 				RelativePath="..\..\engines\sci\engine\heapmgr.h">
 			</File>
 			<File
@@ -397,13 +391,13 @@
 				RelativePath="..\..\engines\sci\sfx\iterator.cpp">
 			</File>
 			<File
+				RelativePath="..\..\engines\sci\sfx\mixer.cpp">
+			</File>
+			<File
 				RelativePath="..\..\engines\sci\sfx\mixer.h">
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\sfx\pcm-iterator.cpp">
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\sfx\pcm_device.cpp">
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\sfx\sequencer.h">
@@ -417,19 +411,10 @@
 			<File
 				RelativePath="..\..\engines\sci\sfx\time.cpp">
 			</File>
-			<File
-				RelativePath="..\..\engines\sci\sfx\timer.cpp">
-			</File>
 			<Filter
 				Name="device">
 				<File
 					RelativePath="..\..\engines\sci\sfx\device\devices.cpp">
-				</File>
-			</Filter>
-			<Filter
-				Name="mixer">
-				<File
-					RelativePath="..\..\engines\sci\sfx\mixer\soft.cpp">
 				</File>
 			</Filter>
 			<Filter
