--- a/dists/msvc7/sword1.vcproj
+++ b/dists/msvc7/sword1.vcproj
@@ -217,6 +217,12 @@
 		<File
 			RelativePath="..\..\engines\sword1\text.h">
 		</File>
+		<File
+			RelativePath="..\..\engines\sword1\vag.cpp">
+		</File>
+		<File
+			RelativePath="..\..\engines\sword1\vag.h">
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
