--- a/dists/msvc71/sword1.vcproj
+++ b/dists/msvc71/sword1.vcproj
@@ -231,6 +231,12 @@
 		<File
 			RelativePath="..\..\engines\sword1\text.h">
 		</File>
+		<File
+			RelativePath="..\..\engines\sword1\vag.cpp">
+		</File>
+		<File
+			RelativePath="..\..\engines\sword1\vag.h">
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
