--- a/dists/msvc9/sword1.vcproj
+++ b/dists/msvc9/sword1.vcproj
@@ -319,6 +319,14 @@
 			RelativePath="..\..\engines\sword1\text.h"
 			>
 		</File>
+		<File
+			RelativePath="..\..\engines\sword1\vag.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\engines\sword1\vag.h"
+			>
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
