Enable SCI for Wii
svn-id: r38966

--- a/backends/platform/wii/Makefile
+++ b/backends/platform/wii/Makefile
@@ -52,6 +52,7 @@ ENABLE_MADE = STATIC_PLUGIN
 ENABLE_PARALLACTION = STATIC_PLUGIN
 ENABLE_QUEEN = STATIC_PLUGIN
 ENABLE_SAGA = STATIC_PLUGIN
+ENABLE_SCI = STATIC_PLUGIN
 ENABLE_IHNM = STATIC_PLUGIN
 ENABLE_SAGA2 = STATIC_PLUGIN
 ENABLE_SKY = STATIC_PLUGIN
