set DEPDIR; copy COPYING.LGPL for the dist target; use debug level 3 when uploading the binary
svn-id: r38967

--- a/backends/platform/wii/Makefile
+++ b/backends/platform/wii/Makefile
@@ -89,6 +89,7 @@ USE_FLAC = 1
 srcdir = ../../..
 VPATH = $(srcdir)
 HAVE_GCC3 = 1
+DEPDIR = .deps
 
 DISTPATH = $(srcdir)/dists/wii
 
@@ -220,7 +221,7 @@ upload: $(TARGET).dol
 ifeq ($(GAMECUBE),1)
 	$(DEVKITPPC)/bin/geckoupload $(TARGET).dol
 else
-	$(DEVKITPPC)/bin/wiiload $(TARGET).dol
+	$(DEVKITPPC)/bin/wiiload $(TARGET).dol -d3
 endif
 
 gdb:
@@ -241,6 +242,7 @@ endif
 	$(CP) $(DISTPATH)/READMII dist/scummvm/
 	$(CP) $(srcdir)/AUTHORS dist/scummvm/
 	$(CP) $(srcdir)/COPYING dist/scummvm/
+	$(CP) $(srcdir)/COPYING.LGPL dist/scummvm/
 	$(CP) $(srcdir)/COPYRIGHT dist/scummvm/
 	$(CP) $(srcdir)/NEWS dist/scummvm/
 	$(CP) $(srcdir)/README dist/scummvm/
