Updated the MSVC project files of the Kyra engine
svn-id: r39046

--- a/dists/msvc71/kyra.vcproj
+++ b/dists/msvc71/kyra.vcproj
@@ -385,6 +385,9 @@
 			RelativePath="..\..\engines\kyra\sprites.h">
 		</File>
 		<File
+			RelativePath="..\..\engines\kyra\sprites_lol.cpp">
+		</File>
+		<File
 			RelativePath="..\..\engines\kyra\staticres.cpp">
 		</File>
 		<File
