--- a/dists/msvc8/kyra.vcproj
+++ b/dists/msvc8/kyra.vcproj
@@ -523,6 +523,10 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\engines\kyra\sprites_lol.cpp"
+			>
+		</File>
+		<File
 			RelativePath="..\..\engines\kyra\staticres.cpp"
 			>
 		</File>
