--- a/backends/platform/wince/Makefile
+++ b/backends/platform/wince/Makefile
@@ -39,6 +39,8 @@ ENABLE_PARALLACTION = STATIC_PLUGIN
 ENABLE_DRASCULA = STATIC_PLUGIN
 ENABLE_GROOVIE = STATIC_PLUGIN
 ENABLE_TUCKER = STATIC_PLUGIN
+#ENABLE_SCI = STATIC_PLUGIN
+#ENABLE_TINSEL = STATIC_PLUGIN
 #ENABLE_CRUISE = STATIC_PLUGIN
 #ENABLE_IGOR = STATIC_PLUGIN
 #ENABLE_M4 = STATIC_PLUGIN
