--- a/backends/platform/ps2/Makefile.ps2
+++ b/backends/platform/ps2/Makefile.ps2
@@ -1,9 +1,41 @@
 # $Header: Exp $
-include $(PS2SDK)/Defs.make
+ include $(PS2SDK)/Defs.make
 
+PS2_EXTRA = /media/disk-1/nw8240/extras/scummvm/ports
+PS2_EXTRA_INCS = /zlib/include /libmad/ee/include /SjPcm/ee/src /tremor
+PS2_EXTRA_LIBS = /zlib/lib /libmad/ee/lib /SjPcm/ee/lib /tremor/tremor
+
+ENABLED=STATIC_PLUGIN
+
+#control build
 DISABLE_SCALERS = true
 DISABLE_HQ_SCALERS = true
-# DISABLE_KYRA = true
+
+ENABLE_SCUMM = $(ENABLED)
+ENABLE_SCUMM_7_8 = $(ENABLED)
+ENABLE_HE = $(ENABLED)
+ENABLE_AGI = $(ENABLED)
+ENABLE_AGOS = $(ENABLED)
+ENABLE_CINE = $(ENABLED)
+ENABLE_CRUISE = $(ENABLED)
+ENABLE_DRASCULA = $(ENABLED)
+ENABLE_GOB = $(ENABLED)
+ENABLE_IGOR = $(ENABLED)
+ENABLE_KYRA = $(ENABLED)
+ENABLE_LURE = $(ENABLED)
+# ENABLE_M4 = $(ENABLED)
+ENABLE_MADE = $(ENABLED)
+ENABLE_PARALLACTION = $(ENABLED)
+ENABLE_QUEEN = $(ENABLED)
+ENABLE_SAGA = $(ENABLED)
+ENABLE_SAGA2 = $(ENABLED)
+ENABLE_IHNM = $(ENABLED)
+ENABLE_SKY = $(ENABLED)
+ENABLE_SWORD1 = $(ENABLED)
+ENABLE_SWORD2 = $(ENABLED)
+# ENABLE_TINSEL = $(ENABLED)
+ENABLE_TOUCHE = $(ENABLED)
+
 HAVE_GCC3 = true
 
 CC		= ee-gcc
@@ -19,22 +51,12 @@ RM 	= rm -f
 srcdir = ../../..
 VPATH = $(srcdir)
 INCDIR = ../../../
-DEPDIR = .deps
+# DEPDIR = .deps
 
-DEFINES  = -DUSE_VORBIS -DUSE_TREMOR -DUSE_MAD -DUSE_MPEG2 -DUSE_ZLIB -D_EE -D__PLAYSTATION2__ -O2 -Wall -Wno-multichar
+DEFINES  = -DUSE_VORBIS -DUSE_TREMOR -DUSE_MAD -DUSE_ZLIB -D_EE -D__PLAYSTATION2__ -O2 -Wall -Wno-multichar
 
-# PS2SDK-Ports from ps2dev.org's SVN repository for libmad, zlib and ucl
-PS2SDK_PORTS = /mnt/winxp/scummvm/ports
-PS2SDK_PORTS_INCS = /ucl /zlib/include /libmad/ee/include
-PS2SDK_PORTS_LIBS = /ucl /zlib/lib /libmad/ee/lib
 
-# we also need SjPcm, Tremor and libmpeg2
-MORE_LIBS_DIR = /mnt/winxp/scummvm/ports
-MORE_LIBS_INCS = /SjPcm/ee/src /mpeg2dec/include /tremor
-MORE_LIBS_LIBS = /SjPcm/ee/lib /mpeg2dec/libmpeg2 /tremor/tremor
-
-INCLUDES  = $(addprefix -I$(PS2SDK_PORTS),$(PS2SDK_PORTS_INCS)) 
-INCLUDES += $(addprefix -I$(MORE_LIBS_DIR),$(MORE_LIBS_INCS))
+INCLUDES  = $(addprefix -I$(PS2_EXTRA),$(PS2_EXTRA_INCS)) 
 INCLUDES += -I $(PS2SDK)/ee/include -I $(PS2SDK)/common/include -I ./common -I . -I $(srcdir) -I $(srcdir)/engines
 
 TARGET = elf/scummvm.elf
@@ -44,12 +66,10 @@ OBJS := backends/platform/ps2/DmaPipe.o \
     backends/platform/ps2/irxboot.o \
 	backends/platform/ps2/ps2input.o \
 	backends/platform/ps2/ps2pad.o \
-	backends/platform/ps2/rawsavefile.o \
-    backends/platform/ps2/savefile.o \
 	backends/platform/ps2/savefilemgr.o \
     backends/platform/ps2/fileio.o \
-    backends/platform/ps2/icon.o \
     backends/platform/ps2/asyncfio.o \
+	backends/platform/ps2/icon.o \
     backends/platform/ps2/cd.o \
     backends/platform/ps2/eecodyvdfs.o \
     backends/platform/ps2/rpckbd.o \
@@ -64,9 +84,8 @@ include $(srcdir)/Makefile.common
 
 LDFLAGS += -mno-crt0 $(PS2SDK)/ee/startup/crt0.o -T $(PS2SDK)/ee/startup/linkfile 
 LDFLAGS += -L $(PS2SDK)/ee/lib -L .
-LDFLAGS += $(addprefix -L$(MORE_LIBS_DIR),$(MORE_LIBS_LIBS))
-LDFLAGS += $(addprefix -L$(PS2SDK_PORTS),$(PS2SDK_PORTS_LIBS)) 
-LDFLAGS += -lmc -lpad -lmouse -lhdd -lpoweroff -lsjpcm -lmpeg2 -lmad -ltremor -lz -lucl -lm -lc -lfileXio -lkernel -lstdc++ 
+LDFLAGS += $(addprefix -L$(PS2_EXTRA),$(PS2_EXTRA_LIBS)) 
+LDFLAGS += -lmc -lpad -lmouse -lhdd -lpoweroff -lsjpcm -lmad -ltremor -lz -lm -lc -lfileXio -lkernel -lstdc++ 
 # LDFLAGS += -s 
 
 all: $(TARGET)
