Updated the MSVC project files for the SCI engine and the ScummVM common code with the latest changes
svn-id: r39124

--- a/dists/msvc71/scummvm.vcproj
+++ b/dists/msvc71/scummvm.vcproj
@@ -464,6 +464,12 @@
 				RelativePath="..\..\sound\shorten.h">
 			</File>
 			<File
+				RelativePath="..\..\sound\timestamp.cpp">
+			</File>
+			<File
+				RelativePath="..\..\sound\timestamp.h">
+			</File>
+			<File
 				RelativePath="..\..\sound\voc.cpp">
 			</File>
 			<File
