--- a/dists/msvc7/sci.vcproj
+++ b/dists/msvc7/sci.vcproj
@@ -361,9 +361,6 @@
 				RelativePath="..\..\engines\sci\scicore\sciconsole.h">
 			</File>
 			<File
-				RelativePath="..\..\engines\sci\scicore\script.cpp">
-			</File>
-			<File
 				RelativePath="..\..\engines\sci\scicore\versions.cpp">
 			</File>
 			<File
@@ -391,15 +388,6 @@
 				RelativePath="..\..\engines\sci\sfx\iterator.cpp">
 			</File>
 			<File
-				RelativePath="..\..\engines\sci\sfx\mixer.cpp">
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\sfx\mixer.h">
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\sfx\pcm-iterator.cpp">
-			</File>
-			<File
 				RelativePath="..\..\engines\sci\sfx\sequencer.h">
 			</File>
 			<File
@@ -407,9 +395,6 @@
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\sfx\songlib.cpp">
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\sfx\time.cpp">
 			</File>
 			<Filter
 				Name="device">
@@ -480,6 +465,9 @@
 		</File>
 		<File
 			RelativePath="..\..\engines\sci\sci_memory.h">
+		</File>
+		<File
+			RelativePath="..\..\engines\sci\engine\script.cpp">
 		</File>
 		<File
 			RelativePath="..\..\engines\sci\tools.cpp">
