--- a/dists/msvc7/scummvm.vcproj
+++ b/dists/msvc7/scummvm.vcproj
@@ -450,6 +450,12 @@
 				RelativePath="..\..\sound\shorten.h">
 			</File>
 			<File
+				RelativePath="..\..\sound\timestamp.cpp">
+			</File>
+			<File
+				RelativePath="..\..\sound\timestamp.h">
+			</File>
+			<File
 				RelativePath="..\..\sound\voc.cpp">
 			</File>
 			<File
