--- a/dists/msvc71/sci.vcproj
+++ b/dists/msvc71/sci.vcproj
@@ -375,9 +375,6 @@
 				RelativePath="..\..\engines\sci\scicore\sciconsole.h">
 			</File>
 			<File
-				RelativePath="..\..\engines\sci\scicore\script.cpp">
-			</File>
-			<File
 				RelativePath="..\..\engines\sci\scicore\versions.cpp">
 			</File>
 			<File
@@ -405,15 +402,6 @@
 				RelativePath="..\..\engines\sci\sfx\iterator.cpp">
 			</File>
 			<File
-				RelativePath="..\..\engines\sci\sfx\mixer.cpp">
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\sfx\mixer.h">
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\sfx\pcm-iterator.cpp">
-			</File>
-			<File
 				RelativePath="..\..\engines\sci\sfx\sequencer.h">
 			</File>
 			<File
@@ -421,9 +409,6 @@
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\sfx\songlib.cpp">
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\sfx\time.cpp">
 			</File>
 			<Filter
 				Name="device">
@@ -494,6 +479,9 @@
 		</File>
 		<File
 			RelativePath="..\..\engines\sci\sci_memory.h">
+		</File>
+		<File
+			RelativePath="..\..\engines\sci\engine\script.cpp">
 		</File>
 		<File
 			RelativePath="..\..\engines\sci\tools.cpp">
