--- a/dists/msvc8/scummvm.vcproj
+++ b/dists/msvc8/scummvm.vcproj
@@ -633,6 +633,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\sound\timestamp.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\sound\timestamp.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\sound\voc.cpp"
 				>
 			</File>
