--- a/dists/msvc9/sci.vcproj
+++ b/dists/msvc9/sci.vcproj
@@ -511,10 +511,6 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\engines\sci\scicore\script.cpp"
-				>
-			</File>
-			<File
 				RelativePath="..\..\engines\sci\scicore\versions.cpp"
 				>
 			</File>
@@ -551,18 +547,6 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\engines\sci\sfx\mixer.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\sfx\mixer.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\sfx\pcm-iterator.cpp"
-				>
-			</File>
-			<File
 				RelativePath="..\..\engines\sci\sfx\sequencer.h"
 				>
 			</File>
@@ -572,10 +556,6 @@
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\sfx\songlib.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\sfx\time.cpp"
 				>
 			</File>
 			<Filter
@@ -669,6 +649,10 @@
 		</File>
 		<File
 			RelativePath="..\..\engines\sci\sci_memory.h"
+			>
+		</File>
+		<File
+			RelativePath="..\..\engines\sci\engine\script.cpp"
 			>
 		</File>
 		<File
