Add subsection for subengine LOL in kyra
svn-id: r39162

--- a/backends/platform/symbian/mmp/scummvm_kyra.mmp.in
+++ b/backends/platform/symbian/mmp/scummvm_kyra.mmp.in
@@ -49,6 +49,12 @@ SOURCEPATH ..\..\..\..\engines\kyra
 
 //STOP_AUTO_OBJECTS_KYRA_//
 
+//START_AUTO_OBJECTS_KYRA_ENABLE_LOL//
+
+	// empty base file, will be updated by Perl build scripts
+
+//STOP_AUTO_OBJECTS_KYRA_ENABLE_LOL//
+
 // *** Include paths
 
 USERINCLUDE     ..\..\..\..\engines
