SCI: Renamed vocab.cpp to vocabulary.cpp, to match the name of the header file
svn-id: r39213

--- a/dists/msvc71/sci.vcproj
+++ b/dists/msvc71/sci.vcproj
@@ -369,7 +369,7 @@
 				RelativePath="..\..\engines\sci\scicore\versions.cpp">
 			</File>
 			<File
-				RelativePath="..\..\engines\sci\scicore\vocab.cpp">
+				RelativePath="..\..\engines\sci\scicore\vocabulary.cpp">
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\scicore\vocab_debug.cpp">
