--- a/dists/msvc8/sci.vcproj
+++ b/dists/msvc8/sci.vcproj
@@ -502,7 +502,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\engines\sci\scicore\vocab.cpp"
+				RelativePath="..\..\engines\sci\scicore\vocabulary.cpp"
 				>
 			</File>
 			<File
