--- a/dists/msvc7/agos.vcproj
+++ b/dists/msvc7/agos.vcproj
@@ -33,7 +33,7 @@
 				ForceConformanceInForLoopScope="TRUE"
 				UsePrecompiledHeader="0"
 				WarningLevel="4"
-				WarnAsError="TRUE"
+				WarnAsError="FALSE"
 				SuppressStartupBanner="FALSE"
 				Detect64BitPortabilityProblems="FALSE"
 				DebugInformationFormat="4"/>
@@ -182,6 +182,9 @@
 			RelativePath="..\..\engines\agos\oracle.cpp">
 		</File>
 		<File
+			RelativePath="..\..\engines\agos\pn.cpp">
+		</File>
+		<File
 			RelativePath="..\..\engines\agos\res.cpp">
 		</File>
 		<File
@@ -207,6 +210,9 @@
 		</File>
 		<File
 			RelativePath="..\..\engines\agos\script_ff.cpp">
+		</File>
+		<File
+			RelativePath="..\..\engines\agos\script_pn.cpp">
 		</File>
 		<File
 			RelativePath="..\..\engines\agos\script_pp.cpp">
@@ -246,6 +252,9 @@
 		</File>
 		<File
 			RelativePath="..\..\engines\agos\vga_ff.cpp">
+		</File>
+		<File
+			RelativePath="..\..\engines\agos\vga_pn.cpp">
 		</File>
 		<File
 			RelativePath="..\..\engines\agos\vga_s1.cpp">
