--- a/dists/msvc8/agos.vcproj
+++ b/dists/msvc8/agos.vcproj
@@ -54,7 +54,7 @@
 				ForceConformanceInForLoopScope="true"
 				UsePrecompiledHeader="0"
 				WarningLevel="4"
-				WarnAsError="true"
+				WarnAsError="false"
 				SuppressStartupBanner="false"
 				Detect64BitPortabilityProblems="false"
 				DebugInformationFormat="4"
@@ -271,6 +271,10 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\engines\agos\pn.cpp"
+			>
+		</File>
+		<File
 			RelativePath="..\..\engines\agos\res.cpp"
 			>
 		</File>
@@ -304,6 +308,10 @@
 		</File>
 		<File
 			RelativePath="..\..\engines\agos\script_ff.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\engines\agos\script_pn.cpp"
 			>
 		</File>
 		<File
@@ -356,6 +364,10 @@
 		</File>
 		<File
 			RelativePath="..\..\engines\agos\vga_ff.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\engines\agos\vga_pn.cpp"
 			>
 		</File>
 		<File
