--- a/dists/msvc9/agos.vcproj
+++ b/dists/msvc9/agos.vcproj
@@ -55,7 +55,7 @@
 				ForceConformanceInForLoopScope="true"
 				UsePrecompiledHeader="0"
 				WarningLevel="4"
-				WarnAsError="true"
+				WarnAsError="false"
 				SuppressStartupBanner="false"
 				Detect64BitPortabilityProblems="false"
 				DebugInformationFormat="4"
@@ -272,6 +272,10 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\engines\agos\pn.cpp"
+			>
+		</File>
+		<File
 			RelativePath="..\..\engines\agos\res.cpp"
 			>
 		</File>
@@ -305,6 +309,10 @@
 		</File>
 		<File
 			RelativePath="..\..\engines\agos\script_ff.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\engines\agos\script_pn.cpp"
 			>
 		</File>
 		<File
@@ -357,6 +365,10 @@
 		</File>
 		<File
 			RelativePath="..\..\engines\agos\vga_ff.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\engines\agos\vga_pn.cpp"
 			>
 		</File>
 		<File
