Updated the MSVC project files of the SAGA engine
svn-id: r39235

--- a/dists/msvc8/saga.vcproj
+++ b/dists/msvc8/saga.vcproj
@@ -255,15 +255,15 @@
 			>
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\introproc_fta2.cpp"
-			>
-		</File>
-		<File
 			RelativePath="..\..\engines\saga\introproc_ihnm.cpp"
 			>
 		</File>
 		<File
 			RelativePath="..\..\engines\saga\introproc_ite.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\engines\saga\introproc_saga2.cpp"
 			>
 		</File>
 		<File
