--- a/dists/msvc7/saga.vcproj
+++ b/dists/msvc7/saga.vcproj
@@ -170,13 +170,13 @@
 			RelativePath="..\..\engines\saga\interface.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\saga\introproc_fta2.cpp">
-		</File>
-		<File
 			RelativePath="..\..\engines\saga\introproc_ihnm.cpp">
 		</File>
 		<File
 			RelativePath="..\..\engines\saga\introproc_ite.cpp">
+		</File>
+		<File
+			RelativePath="..\..\engines\saga\introproc_saga2.cpp">
 		</File>
 		<File
 			RelativePath="..\..\engines\saga\isomap.cpp">
