Updated the MSVC project files of the SCI engine and ScummVM
svn-id: r39294

--- a/dists/msvc7/scummvm.vcproj
+++ b/dists/msvc7/scummvm.vcproj
@@ -232,6 +232,9 @@
 				RelativePath="..\..\common\list.h">
 			</File>
 			<File
+				RelativePath="..\..\common\list_intern.h">
+			</File>
+			<File
 				RelativePath="..\..\common\md5.cpp">
 			</File>
 			<File
