--- a/dists/msvc7/sci.vcproj
+++ b/dists/msvc7/sci.vcproj
@@ -295,6 +295,12 @@
 				RelativePath="..\..\engines\sci\gfx\operations.h">
 			</File>
 			<File
+				RelativePath="..\..\engines\sci\gfx\palette.cpp">
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\gfx\palette.h">
+			</File>
+			<File
 				RelativePath="..\..\engines\sci\gfx\resmgr.cpp">
 			</File>
 			<File
@@ -312,22 +318,25 @@
 			<Filter
 				Name="resource">
 				<File
-					RelativePath="..\..\engines\sci\gfx\resource\sci_font.cpp">
+					RelativePath="..\..\engines\sci\gfx\resource\res_cursor.cpp">
 				</File>
 				<File
-					RelativePath="..\..\engines\sci\gfx\resource\sci_pal_1.cpp">
+					RelativePath="..\..\engines\sci\gfx\resource\res_font.cpp">
 				</File>
 				<File
-					RelativePath="..\..\engines\sci\gfx\resource\sci_pic_0.cpp">
+					RelativePath="..\..\engines\sci\gfx\resource\res_manager.cpp">
 				</File>
 				<File
-					RelativePath="..\..\engines\sci\gfx\resource\sci_resmgr.cpp">
+					RelativePath="..\..\engines\sci\gfx\resource\res_pal.cpp">
 				</File>
 				<File
-					RelativePath="..\..\engines\sci\gfx\resource\sci_view_0.cpp">
+					RelativePath="..\..\engines\sci\gfx\resource\res_pic.cpp">
 				</File>
 				<File
-					RelativePath="..\..\engines\sci\gfx\resource\sci_view_1.cpp">
+					RelativePath="..\..\engines\sci\gfx\resource\res_view0.cpp">
+				</File>
+				<File
+					RelativePath="..\..\engines\sci\gfx\resource\res_view1.cpp">
 				</File>
 			</Filter>
 		</Filter>
