--- a/dists/msvc71/scummvm.vcproj
+++ b/dists/msvc71/scummvm.vcproj
@@ -246,6 +246,9 @@
 				RelativePath="..\..\common\list.h">
 			</File>
 			<File
+				RelativePath="..\..\common\list_intern.h">
+			</File>
+			<File
 				RelativePath="..\..\common\md5.cpp">
 			</File>
 			<File
