--- a/dists/msvc8/scummvm.vcproj
+++ b/dists/msvc8/scummvm.vcproj
@@ -343,6 +343,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\common\list_intern.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\common\md5.cpp"
 				>
 			</File>
