--- a/dists/msvc9/scummvm.vcproj
+++ b/dists/msvc9/scummvm.vcproj
@@ -348,6 +348,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\common\list_intern.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\common\md5.cpp"
 				>
 			</File>
