--- a/dists/msvc9/sci.vcproj
+++ b/dists/msvc9/sci.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9.00"
+	Version="9,00"
 	Name="sci"
 	ProjectGUID="{53F17B2B-0412-4EC3-A999-ED0537BB5223}"
 	RootNamespace="sci"
@@ -312,6 +312,10 @@
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\engine\state.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\engine\stringfrag.cpp"
 				>
 			</File>
 			<File
