Updated the MSVC project files of the SCI engine (added engine/savegame.h)
svn-id: r39378

--- a/dists/msvc71/sci.vcproj
+++ b/dists/msvc71/sci.vcproj
@@ -207,6 +207,9 @@
 				RelativePath="..\..\engines\sci\engine\savegame.cpp">
 			</File>
 			<File
+				RelativePath="..\..\engines\sci\engine\savegame.h">
+			</File>
+			<File
 				RelativePath="..\..\engines\sci\engine\script.h">
 			</File>
 			<File
