--- a/dists/msvc9/sci.vcproj
+++ b/dists/msvc9/sci.vcproj
@@ -287,6 +287,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\engines\sci\engine\savegame.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\engines\sci\engine\script.h"
 				>
 			</File>
