Updated the MSVC project files of the parallaction engine
svn-id: r39403

--- a/dists/msvc7/parallaction.vcproj
+++ b/dists/msvc7/parallaction.vcproj
@@ -218,10 +218,13 @@
 			RelativePath="..\..\engines\parallaction\saveload.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\parallaction\sound.cpp">
+			RelativePath="..\..\engines\parallaction\sound.h">
 		</File>
 		<File
-			RelativePath="..\..\engines\parallaction\sound.h">
+			RelativePath="..\..\engines\parallaction\sound_br.cpp">
+		</File>
+		<File
+			RelativePath="..\..\engines\parallaction\sound_ns.cpp">
 		</File>
 		<File
 			RelativePath="..\..\engines\parallaction\staticres.cpp">
