Updated MSVC project files for commit #39416 (moved vag.* from engines/sword1/ to sound/)
svn-id: r39423

--- a/dists/msvc7/scummvm.vcproj
+++ b/dists/msvc7/scummvm.vcproj
@@ -459,6 +459,12 @@
 				RelativePath="..\..\sound\timestamp.h">
 			</File>
 			<File
+				RelativePath="..\..\sound\vag.cpp">
+			</File>
+			<File
+				RelativePath="..\..\sound\vag.h">
+			</File>			
+			<File
 				RelativePath="..\..\sound\voc.cpp">
 			</File>
 			<File
