--- a/dists/msvc8/scummvm.vcproj
+++ b/dists/msvc8/scummvm.vcproj
@@ -645,6 +645,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\sound\vag.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\sound\vag.h"
+				>
+			</File>			
+			<File
 				RelativePath="..\..\sound\voc.cpp"
 				>
 			</File>
