--- a/dists/msvc71/scummvm.vcproj
+++ b/dists/msvc71/scummvm.vcproj
@@ -473,6 +473,12 @@
 				RelativePath="..\..\sound\timestamp.h">
 			</File>
 			<File
+				RelativePath="..\..\sound\vag.cpp">
+			</File>
+			<File
+				RelativePath="..\..\sound\vag.h">
+			</File>			
+			<File
 				RelativePath="..\..\sound\voc.cpp">
 			</File>
 			<File
