Added the SVN revision to SCUMMVM_VERSION. The variable has be be set externally, e.g. 'make SCUMMVM_SVN_REVISION=x'
svn-id: r39431

--- a/Makefile.common
+++ b/Makefile.common
@@ -118,7 +118,7 @@ VERSION_FILES = \
 	$(srcdir)/dists/iphone/Info.plist \
 	$(srcdir)/dists/macosx/Info.plist
 
-VERSION = $(shell cat "${srcdir}/base/internal_version.h" | cut -d\" -f2)
+VERSION = $(shell tail -n 1 "${srcdir}/base/internal_version.h" | cut -d\" -f2)
 VER_MAJOR = $(shell echo $(VERSION) | cut -d. -f 1)
 VER_MINOR = $(shell echo $(VERSION) | cut -d. -f 2)
 VER_PATCH = $(shell echo $(VERSION) | cut -d. -f 3 | cut -c1)
