--- a/base/internal_version.h.in
+++ b/base/internal_version.h.in
@@ -1,1 +1,5 @@
-#define SCUMMVM_VERSION "@VERSION@"
+#ifndef SCUMMVM_SVN_REVISION
+#define SCUMMVM_SVN_REVISION
+#endif
+
+#define SCUMMVM_VERSION "@VERSION@" SCUMMVM_SVN_REVISION
