Updated the MSVC project files of the tinsel, sci and scummvm projects for the file changes which occurred in commits #39430 and #39439
svn-id: r39440

--- a/dists/msvc7/scummvm.vcproj
+++ b/dists/msvc7/scummvm.vcproj
@@ -277,6 +277,9 @@
 				RelativePath="..\..\common\scummsys.h">
 			</File>
 			<File
+				RelativePath="..\..\common\serializer.h">
+			</File>
+			<File
 				RelativePath="..\..\common\singleton.h">
 			</File>
 			<File
@@ -463,7 +466,7 @@
 			</File>
 			<File
 				RelativePath="..\..\sound\vag.h">
-			</File>			
+			</File>
 			<File
 				RelativePath="..\..\sound\voc.cpp">
 			</File>
