--- a/dists/msvc8/scummvm.vcproj
+++ b/dists/msvc8/scummvm.vcproj
@@ -403,6 +403,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\common\serializer.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\common\singleton.h"
 				>
 			</File>
@@ -651,7 +655,7 @@
 			<File
 				RelativePath="..\..\sound\vag.h"
 				>
-			</File>			
+			</File>
 			<File
 				RelativePath="..\..\sound\voc.cpp"
 				>
