--- a/dists/msvc9/scummvm.vcproj
+++ b/dists/msvc9/scummvm.vcproj
@@ -408,6 +408,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\common\serializer.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\common\singleton.h"
 				>
 			</File>
@@ -656,7 +660,7 @@
 			<File
 				RelativePath="..\..\sound\vag.h"
 				>
-			</File>			
+			</File>
 			<File
 				RelativePath="..\..\sound\voc.cpp"
 				>
